--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,10 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
-	<classpathentry kind="lib" path="lib/cmdGetArg_1.1.2.jar"/>
+	<classpathentry kind="lib" path="lib/cmdGetArg_1.1.3.jar" sourcepath="lib/cmdGetArg_1.1.3.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/FAS-DPD/lib/cmdGetArg_1.1.3.jar!/doc"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
