--- a/.classpath
+++ b/.classpath
@@ -2,12 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
-	<classpathentry kind="lib" path="lib/cmdGetArg_1.1.3.jar" sourcepath="lib/cmdGetArg_1.1.3.jar">
+	<classpathentry kind="lib" path="lib/cmdGetArg_2.1.2.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-15">
 		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/FAS-DPD/lib/cmdGetArg_1.1.3.jar!/doc"/>
+			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/cmdGetArg_2.1.2.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-15"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
